# slido-excercises

./: README.md
.github/workflows/: test.yml
cpp-excercise/Average/: AverageConfig.h  AverageConfig.h.in  CMakeLists.txt  main.cpp
cpp-excercise/Average/MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h  myaverage.cpp  myaverage.h
cpp-excercise/Average/benchmarks/: CMakeLists.txt  benchmark.cpp
cpp-excercise/Average/tests/: CMakeLists.txt  test.cpp
cpp-excercise/Average_build/: Average  AverageConfig.h  CMakeCache.txt  Makefile  cmake_install.cmake  input.txt
cpp-excercise/Average_build/MathFunctions/: Makefile  cmake_install.cmake
react-excercise/: package-lock.json  package.json
react-excercise/src/: App.js  App.test.js
react-excercise/src/components/footer/: index.js
react-excercise/src/scenes/updateRequiredScreen/: index.js
react-excercise/src/scenes/welcomeScreen/: index.js
react-excercise/src/styles/: footer.css  updateRequiredScreen.css  welcomeScreen.css
